--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,11 +1,10 @@
 [theme]
 primaryColor="#F63366"
-backgroundColor="#18223B"
-secondaryBackgroundColor="#445F7F"
-textColor="#FAFCFF"
+backgroundColor="#F5F5F9"
+secondaryBackgroundColor="#E4E4EC"
+textColor="#222223"
 font="sans serif"
 
 [server]
 enableStaticServing = true
 enableXsrfProtection=false
-
